--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,7 @@ metadata:
   name: howto-cheatsheet
   annotations:
     github.com/project-slug: deepjyotidutta/howto-cheatsheet
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: other
   lifecycle: unknown
